  and mention that open() is an alias for read().
  http://rt.cpan.org/NoAuth/Bug.html?id=11431
- added reference list of crop() parameters.
  http://rt.cpan.org/NoAuth/Bug.html?id=11430
- reading a tga image with an idstring of 128 or more bytes would result 
  in an allocation error, if the platform char type was signed
- tests now check that tga tags are set
- calling the read() method for a format not included in the Imager build,
  for example, JPEG with no libjpeg installed, would crash with an 
  undefined function error (modified by DynaLoaders dependence on 
  AutoLoader.)
  http://rt.cpan.org/NoAuth/Bug.html?id=9618
- some test scripts have been modified to use Test::More, which is now
  included under the t directory.  Eventually all will be modified to use
  Test::More and the duplicates in t/testtools.pl will be removed
- the convert, crop, rotate, copy, matrix_transform, to_paletted, to_rgb8, 
  scaleX and scaleY methods now warn when called in void context.
  http://rt.cpan.org/NoAuth/Bug.html?id=9672
- correct email addresses in the README file, and include bug reporting
  information there too
- added README for samples directory, describes interleave.pl and 
  anaglyph.pl to start.
- the XS for the internal i_glin() function wasn't copying the pixel
  values across to the returned color objects.
  http://rt.cpan.org/NoAuth/Bug.html?id=11860 
- Imager::Cookbook wasn't included in the MANIFEST
- added samp-form.cgi and samp-image.cgi to the samples directory to 
  demonstrate displaying a generated image on a HTML page.
- Makefile.PL now adds rules to generate a suitable META.yml to the
  generated Makefile.
- added sample code for handling images uploaded via a HTML form.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
