@@ -1,0 +1,4 @@
+GIMP Gradient
+Name: imager test gradient
+1
+0.000000 0.500000 1.000000 0.000000 0.000000 0.000000 1.000000 1.000000 1.000000 1.000000 1.000000 0 0
