@@ -1047,6 +1047,13 @@ Revision history for Perl extension Imager.
 - Makefile.PL now adds rules to generate a suitable META.yml to the
   generated Makefile.
 - added sample code for handling images uploaded via a HTML form.
+- saving a GIMP gradiant file with Imager::Fountain->save has always been
+  broken.  Fixed it and added tests.
+- newer versions of GIMP add a line to gradient files before the
+  segment count giving a descriptive name of the gradient.  
+  Imager::Fountain can now read and write such gradient files.  The
+  interface is a bit indirect, but I'd like to preserve
+  Imager::Fountain as a blessed array ref for now.
 
 =================================================================
 
